# GPTMock

./: .env.example  .gitignore  AGENTS.md  ASIS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  test_infra_extraction.py  test_structured_output.ipynb
.github/workflows/: docker-publish.yml  lint.yml  pypi-publish.yml  tests.yml
Formula/: chatmock.rb
chatmock/: app.py  cli.py
chatmock/core/: dependencies.py  logging.py  settings.py
chatmock/infra/: __init__.py  auth.py  limits.py  oauth.py  session.py  sse.py  upstream.py
chatmock/routers/: ollama.py  openai.py
chatmock/schemas/: __init__.py
chatmock/services/: chat.py  model_registry.py  reasoning.py  responses.py
docker/: Dockerfile  entrypoint.sh
gptmock/: app.py  cli.py  prompt.md  prompt_gpt5_codex.md
gptmock/core/: badges.py  constants.py  dependencies.py  settings.py  utils.py
gptmock/infra/: __init__.py  auth.py  limits.py  oauth.py  sse.py
gptmock/routers/: __init__.py  health.py  ollama.py  openai.py
gptmock/schemas/: __init__.py  messages.py  requests.py  transform.py
gptmock/services/: chat.py  model_registry.py  reasoning.py  responses.py  upstream.py
scripts/: test.sh  update_test_badge.py
tests/: conftest.py  test_bootstrap.py  test_env_precedence.py  test_helper_modules.py  test_langchain_client.py  test_ollama_client.py  test_openai_client.py  test_responses_api.py  test_rest_api.py
tests/tools/: run_tool_tests_by_model.py  test_bfcl_benchmark.py  test_mcp_tools.py  test_tool_call_calculator.py  test_tool_call_mcporter.py  test_tool_call_parallel.py  test_tool_call_web_search.py  test_tool_calling.py
tests/tools/reports/: bfcl-benchmark-2026-03-01.md
