[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatmock"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.8.3",
    "click==8.2.1",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "idna==3.10",
    "langchain-openai>=1.1.9",
    "openai>=2.21.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
chatmock = "chatmock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chatmock"]

[tool.hatch.build.targets.wheel.force-include]
"chatmock/prompt.md" = "chatmock/prompt.md"
"chatmock/prompt_gpt5_codex.md" = "chatmock/prompt_gpt5_codex.md"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
