[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptmock"
version = "0.0.2"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.8.3",
    "click==8.2.1",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "idna==3.10",
    "openai>=2.21.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
gptmock = "gptmock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gptmock"]

[tool.hatch.build.targets.wheel.force-include]
"gptmock/prompt.md" = "gptmock/prompt.md"
"gptmock/prompt_gpt5_codex.md" = "gptmock/prompt_gpt5_codex.md"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "langchain-openai>=1.1.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
