[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptmock"
version = "2026.2.28"
requires-python = ">=3.13"
description = "OpenAI & Ollama compatible API powered by your ChatGPT account"
readme = "README.md"
license = "MIT"
keywords = ["openai", "chatgpt", "gpt5", "proxy", "api", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "certifi==2025.8.3",
    "click==8.2.1",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "idna==3.10",
    "openai>=2.21.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/rapidrabbit76/GPTMock"
Repository = "https://github.com/rapidrabbit76/GPTMock"
Issues = "https://github.com/rapidrabbit76/GPTMock/issues"

[project.scripts]
gptmock = "gptmock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gptmock"]

[tool.hatch.build.targets.wheel.force-include]
"gptmock/prompt.md" = "gptmock/prompt.md"
"gptmock/prompt_gpt5_codex.md" = "gptmock/prompt_gpt5_codex.md"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "langchain-openai>=1.1.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
